feat: Add API endpoint to retrieve user profile
